--- a/static/css/style.css
+++ b/static/css/style.css
@@ -624,17 +624,19 @@ a {
     border-radius: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: floralwhite;
+    background-color: mintcream;
     overflow: hidden;
 }
 
 .profile-schedules-item-textarea {
     height: 150px;
-    width: 350px;
+    width: 90%;
     border: 1px solid rgb(0, 0, 0);  
     border-radius: 10px;
     padding: 10px 10px 10px 10px;
     overflow-y: auto;
+    margin: auto;
+    margin-bottom: 5px;
 }
 
 .profile-post-item-textarea {
@@ -1313,21 +1315,45 @@ label {
     width: 80%;
     height: 1000px;
     margin: auto;
-    border-top: 1px solid rgb(0, 0, 0);
-    border-right: 1px solid rgb(0, 0, 0);
-    border-left: 1px solid rgb(0, 0, 0);
     overflow: auto;
 }
 
 .grid-display-schedule-item {
     position: relative;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
+    padding: 10px 10px 10px 10px;
     width: 100%;
-    border-bottom: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
+    background-color: mintcream;
+    border-radius: 10px;
+    overflow:hidden;
+}
+
+.all-schedules-item-background-image {
+    z-index: 0;
+    position: absolute;
+    top: -22px;
+    left: -14px;
+    height: 283px;
+    width: 460px;
+    margin: auto;
+    opacity: 0.5;    
+}
+
+.schedule-item-leftrows {
+    position: relative;
+    display: grid;
+    grid-template-columns: 25% 75%;
     padding-top: 10px;
     padding-bottom: 10px;
-    overflow:hidden;
+}
+
+.schedule-item-rightrows {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 10% 60% 30%;
 }
 
 .grid-display-schedule-item-expanded {
@@ -1413,15 +1439,23 @@ label {
 
 .view-schedule-button {
     position: absolute;
-    right: 20px;
-    bottom: 10px;
-    text-align: center;
+    right: 24px;
+    bottom: 3px;
     width: 50px;
     height: 50px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
     cursor: pointer;
     transition: 0.3s;
+}
+
+.realign-icon {
+    position:relative;
+    bottom: 15px;
+}
+
+.shift-icon {
+    right: 10px;
 }
 
 .view-schedule-button:hover {
