--- a/static/css/style.css
+++ b/static/css/style.css
@@ -330,7 +330,7 @@ a {
 .grid-display-search-results {
     display: inline-grid;
     grid-template-columns: auto;
-    height: 1000px;
+    height: auto;
     width: 1200px;
     margin: auto;
     overflow: auto;
@@ -1116,6 +1116,11 @@ label {
     cursor: pointer;
     line-height: 30px;
     transition: 0.3s;
+}
+
+.back-to-search-button:hover {
+    background-color: black;
+    color: white;
 }
 
 /*------------------------Display Games---------------------------*/
