--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,13 +26,11 @@
     </div>
     <div class="homepage-display" id="homepage-display"></div>
     <div class="homepage-display-bottom" id="homepage-display-bottom">
-        <center>
             Website powered by <a href="https://www.giantbomb.com/api/" target="_blank">GiantBomb
             <i class="bi bi-box-arrow-up-right"></i></a>
-        </center>
     </div>
     <div id="snackbar"></div>
-
+<!--
     <div class="navbar2">
         <div class="adminbutton" id="users">Users</div>
         <div class="adminbutton" id="games">Games</div>
@@ -41,7 +39,7 @@
         <div class="adminbutton" id="posts">Posts</div>
         <div class="adminbutton" id="schedule-users">Schedule Users</div>
         <div class="adminbutton" id="platforms">Platforms</div>
-    </div>
+    </div> -->
 {% endblock %}
 {% block js %}
     <!-- Bootstrap JavaScript with Popper (a Bootstrap dependency for popovers) -->
