added sanitization of forms

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,7 +30,7 @@
             <i class="bi bi-box-arrow-up-right"></i></a>
     </div>
     <div id="snackbar"></div>
-<!--
+
     <div class="navbar2">
         <div class="adminbutton" id="users">Users</div>
         <div class="adminbutton" id="games">Games</div>
@@ -39,7 +39,7 @@
         <div class="adminbutton" id="posts">Posts</div>
         <div class="adminbutton" id="schedule-users">Schedule Users</div>
         <div class="adminbutton" id="platforms">Platforms</div>
-    </div> -->
+    </div> 
 {% endblock %}
 {% block js %}
     <!-- Bootstrap JavaScript with Popper (a Bootstrap dependency for popovers) -->
